# ai-news-tracker

./: Dockerfile  README.md  feeds.yaml  gemini_summarizer.py  main.py  notifier.py  pyproject.toml  requirements.txt  state.py  utils.py  뉴스스트랩.md
.github/workflows/: daily-summary.yml  hourly-check.yml
data/: seen-2025-10-23.json  seen-2025-10-24.json  seen-2025-10-25.json  seen-2025-10-26.json  seen-2025-10-27.json  seen-2025-10-28.json  seen-2025-10-29.json  seen-2025-10-30.json  seen-2025-10-31.json  seen-2025-11-01.json  seen-2025-11-02.json  seen-2025-11-03.json  seen-2025-11-04.json  seen-2025-11-05.json  seen-2025-11-06.json  seen-2025-11-07.json  seen-2025-11-08.json  seen-2025-11-09.json  seen-2025-11-10.json  seen-2025-11-11.json  seen-2025-11-12.json  seen-2025-11-13.json  seen-2025-11-14.json  seen-2025-11-15.json  seen-2025-11-16.json  seen-2025-11-17.json  seen-2025-11-18.json  seen-2025-11-19.json  seen-2025-11-20.json  seen-2025-11-21.json  seen-2025-11-22.json  seen-2025-11-23.json  seen-2025-11-24.json  seen-2025-11-25.json  seen-2025-11-26.json  seen-2025-11-27.json  seen-2025-11-28.json  seen-2025-11-29.json  seen-2025-11-30.json  seen-2025-12-01.json  (+221 more)
scripts/: run_fetcher.py
src/ai_news_tracker/: api.py  classifier.py  config.py  db.py  fetcher.py  main.py  parser.py  storage.py  utils.py
tests/: test_classifier.py  test_fetcher.py  test_parser.py
workflows/: ci.yml  scheduled_fetch.yml
