[tool]
name = "ai-news-tracker"
version = "0.1.0"
description = "An AI-powered news tracker that fetches, parses, classifies, and stores news articles."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
pandas = "^1.3.3"
sqlalchemy = "^1.4.22"

[dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"